<resources>
    <plurals name="measurement_output_template">
        <item quantity="zero">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
        <item quantity="one">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
        <item quantity="other">Pulse: %2.1f (%d cycles in %2.1f seconds)</item>
    </plurals>
    <string name="app_name2">                    Your Safety First      </string>
    <string name="title_physicalCondition">     Physical Condition</string>
    <string name="title_dashboard">             Dashboard</string>
    <string name="title_notifications">         Notifications</string>
    <string name="title_profile">               Profile</string>
    <string name="title_previousData">          Previous Data</string>
    <string name="change_language">             Change your language<font color="#FF0000">*</font></string>
    <string name="select_language">             Select your language</string>
    <string name="login">                       Login</string>
    <string name="login_into_your_account">     Login into your account</string>
    <string name="delete_user_account">         Are you sure you want to delete your account?</string>
    <string name="delete_account">              Delete Account</string>
    <string name="email_id">                    Email Address</string>
    <string name="email_id_signup">             Email Address<font color="#FF0000">*</font></string>
    <string name="password">                    Password</string>
    <string name="password_signup">             Password<font color="#FF0000">*</font></string>
    <string name="enter_email_id">              Enter Email Address</string>
    <string name="enter_password">              Enter Password</string>
    <string name="forgot_password">             Forgot Password</string>
    <string name="forgot_password_que">             Forgot Password?</string>
    <string name="don_t_have_an_account_signup">Don’t have an account?</string>
    <string name="signup">                      Signup</string>
    <string name="create_your_account">         Create your account!</string>
    <string name="username">                    Username</string>
    <string name="username_signup">             Username<font color="#FF0000">*</font></string>
    <string name="enter_username">              Enter Username</string>
    <string name="confirm_password">            Confirm Password</string>
    <string name="confirm_password_signup">     Confirm Password<font color="#FF0000">*</font></string>
    <string name="gender">                      Gender<font color="#FF0000">*</font></string>
    <string name="enter_phone_number">          Enter Telephone Number</string>
    <string name="phone_number">                Telephone Number</string>
    <string name="already_a_member">            Already a member?</string>
    <string name="send_email">                  Send Email</string>
    <string name="enter_otp">                   Enter OTP</string>
    <string name="enter_otp_sent_to_your_email">Enter OTP sent to your email</string>
    <string name="continu">                     Continue</string>
    <string name="reset_password">              Reset Password</string>
    <string name="enter_new_password">          Enter New Password</string>
    <string name="new_password">          New Password</string>
    <string name="enter_current_password">          Enter Current Password</string>
    <string name="enter_confirm_password">          Enter Confirm Password</string>
    <string name="update_profile">Update Your Profile</string>
    <string name="change_password">                 Change Password                 </string>
    <string name="logout">                          Logout                          </string>
    <string name="current_password">                Current Password                </string>
    <string name="_5_ways_to_drive_safe">           5 ways to drive safe            </string>
    <string name="safety_drive_neuro_conditioning"> Safety Drive Neuro Conditioning </string>
    <string name="sdnc">                            Welcome to SDNC diagnosis                            </string>
    <string name="search_by_date">                  Search by date                  </string>
    <string name="vital_details">                   Vital Detail                                       </string>
    <string name="data_acquisition_camera_smart_ring">Data acquisition - Smart ring</string>
    <string name="data_acquisition_camera">Data acquisition - Camera</string>
    <string name="date_amp_time">                   <![CDATA[Date & Time:]]>        </string>
    <string name="pulse">                           Pulse:                          </string>
    <string name="no_of_steps">                     No of steps:                    </string>
    <string name="qol_score">                       QOL score:                      </string>
    <string name="reflex_test">                     Reflex test:                    </string>
    <string name="aptitude_score">                  Aptitude score:                 </string>
    <string name="overall_judgement">               Final judgment result              </string>
    <string name="bed_time">                        Bed time <font color="#FF0000">*</font>                      </string>
    <string name="i_agree_to_the_terms_amp_conditions">I agree to the Terms &amp; Conditions</string>
    <string name="privacy_policy">                  Privacy Policy                  </string>
    <string name="wake_up_time">                    Wake up time <font color="#FF0000">*</font>                  </string>
    <string name="breakfast">                       Breakfast                       </string>
    <string name="lunch">                           Lunch                           </string>
    <string name="dinner">                          Dinner                          </string>
    <string name="other">                           Snack                           </string>
    <string name="meal">                            Meal the day before                            </string>
    <string name="physical_condition">              Physical Condition <font color="#FF0000"><font color="#FF0000">*</font></font>                        </string>
    <string name="good">                            Good                            </string>
    <string name="bad">                             Bad                             </string>
    <string name="existence_of_fatigue">            Existence of fatigue <font color="#FF0000">*</font>          </string>
    <string name="yes">                             Yes                             </string>
    <string name="no">                              No                              </string>
    <string name="presence_or_absence_of_medication">           Presence of sleepiness <font color="#FF0000">*</font>                </string>
    <string name="memo">                                        Memo                                    </string>
    <string name="type_something">                              Type something                          </string>
    <string name="save">                                        Save                                    </string>
    <string name="data_confirmation">                           Data confirmation                       </string>
    <string name="living_situation_data_confirmation">          Living situation data confirmation      </string>
    <string name="registration_date">                           Registration date                       </string>
    <string name="wake_up_time_">                               Wake up time                           </string>
    <string name="bed_time_">                                   Bed time                          </string>
    <string name="meal_">                                       Meal                                    </string>
    <string name="physical_condition_">                         Physical condition                      </string>
    <string name="existence_of_fatigue_">                       Existence of fatigue                    </string>
    <string name="presence_of_medication_">                     Presence of sleepiness                  </string>
    <string name="note">                                        Note                                    </string>
    <string name="please_select_the_acquisition_method_of_vital_data">Please select the method for obtaining vital data</string>
    <string name="or">                                          or                                      </string>
    <string name="with_smartphone_camera">                      With Smartphone Camera                  </string>
    <string name="get_with_smart_ring">                         Get it with smart ring                  </string>
    <string name="reflex_diagnostic_test">                      Reflex diagnostic test                  </string>
    <string name="reaction_time_test">                          Reaction Time Test                      </string>
    <string name="when_the_box_turns_green_click_as_quickly_as_you_can_click_anywhere_to_start">When the box turns green, click as quickly as you can. Click anywhere to start</string>
    <string name="wait_for_green">                              Wait for green                          </string>
    <string name="click">                                       Click!                                  </string>
    <string name="click_to_keep_going">                         Click to keep going!                    </string>
    <string name="aptitude_test">                               Aptitude test                           </string>
    <string name="let_us_know_how_many_answers_you_are_willing_to_give">Let us know how many answers you are willing to give!</string>
    <string name="no_of_questions">                             No. of questions                        </string>
    <string name="enter_number_of_question">                    Enter number of question                </string>
    <string name="submit">                                      Submit                                  </string>
    <string name="the_state_of_your_safe_driving_nerve_is_as_follows">What is your condition before driving?\n
It became as follows</string>
    <string name="year_of_birth">               Year of Birth                                           </string>
    <string name="select_year_of_birth">        Select Year of Birth                                    </string>
    <string name="enter_height_in_cm">          Height (cm)                                    </string>
    <string name="enter_weight_in_kg">          Weight (kg)                                    </string>
    <string name="enter_height">                Enter Height (cm)                                            </string>
    <string name="enter_weight">                Enter Weight (kg)                                            </string>
    <string name="enter_resting_heart_rate">    Resting Heart Rate (BPM)                              </string>
    <string name="enter_resting_heart_rate_">   Enter Resting Heart Rate                                </string>
    <string name="enter_company_code">          Company Code                                      </string>
    <string name="enter_company_code_">         Enter Company Code                                      </string>
    <string name="ring_use">                    Using the ring<font color="#FF0000">*</font>                                                </string>
    <string name="enter_ring_id">               Ring Id<font color="#FF0000">*</font>                                            </string>
    <string name="enter_ring_id_">              Enter Ring Id                                           </string>
</resources>