<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.apptitudetest.AptitudeActivity">

            <include
                android:id="@+id/top_bar"
                layout="@layout/appbar_back" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="13dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aptitude_test"
                        android:textColor="@color/blue"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/let_us_know_how_many_answers_you_are_willing_to_give"
                        android:textColor="@color/text_grey"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/no_of_questions"
                        android:textColor="@color/text_grey"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/question_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="4dp"
                        android:background="@drawable/edittext_curve"
                        android:hint="@string/enter_number_of_question"
                        android:inputType="number"
                        android:padding="15dp"
                        android:singleLine="true"
                        android:textColor="@color/text_grey"
                        android:textColorHint="@color/hint_grey"
                        android:textSize="15sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        app:cardElevation="8dp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/save"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_curved"
                            android:fontFamily="@font/nexabold"
                            android:text="@string/save"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <include
            android:id="@+id/progress"
            layout="@layout/progress_bar" />


    </FrameLayout>
</layout>